--- a/package.json
+++ b/package.json
@@ -29,19 +29,19 @@
 		"prepare": "husky install"
 	},
 	"devDependencies": {
-		"@sveltejs/adapter-auto": "next",
-		"@sveltejs/kit": "next",
-		"autoprefixer": "^10.4.0",
+		"@sveltejs/adapter-auto": "^1.0.0-next.10",
+		"@sveltejs/kit": "^1.0.0-next.230",
+		"autoprefixer": "^10.4.2",
 		"eslint": "^7.32.0",
 		"eslint-config-prettier": "^8.3.0",
-		"eslint-plugin-svelte3": "^3.2.1",
+		"eslint-plugin-svelte3": "^3.4.0",
 		"husky": "^7.0.4",
-		"lint-staged": "^12.1.3",
+		"lint-staged": "^12.1.7",
 		"postcss": "^8.4.5",
-		"prettier": "^2.4.1",
-		"prettier-plugin-svelte": "^2.4.0",
-		"svelte": "^3.44.0",
-		"tailwindcss": "^3.0.7"
+		"prettier": "^2.5.1",
+		"prettier-plugin-svelte": "^2.6.0",
+		"svelte": "^3.46.1",
+		"tailwindcss": "^3.0.14"
 	},
 	"type": "module",
 	"lint-staged": {
